[package]
name = "octane"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["macros"] }
alloy = { version = "0.1.3", features = ["full", "node-bindings"] }
anyhow = "1.0.86"
tracing = "0.1.40"
async-trait = "0.1.80"
serde = "1.0.204"
futures-util = "0.3.30"
thiserror = "1.0.61"
async-stream = "0.3.5"
serde_json = "1.0.120"
rand = "0.8.5"
tracing-subscriber = "0.3.18"
